# HostPreferred

./: .gitignore  README.md  pubspec.yaml
lib/: main.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: io.dart  models.dart  optimizer.dart
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: io.rs  mod.rs  models.rs  optimizer.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_host_preferred.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_host_preferred.podspec
rust_builder/windows/: CMakeLists.txt
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: CMakeLists.txt  Runner.rc  main.cpp  runner.exe.manifest
