[package]
name = "rust_lib_host_preferred"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1.0.98"
futures = "0.3.31"
once_cell = "1.19"
rand = "0.9.2"
# reqwest 需要开启 json 功能
reqwest = { version = "0.12.22", features = ["json"] }
# serde 需要开启 derive 功能
serde = { version = "1.0", features = ["derive"] }
surge-ping = "0.8.2"
# tokio 需要开启宏和多线程运行时功能
tokio = { version = "1.46", features = ["macros", "rt-multi-thread"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.release]
# 关键：移除调试符号，这是减小体积最重要的一步
strip = true

# 优化级别：'z' 表示“尽一切可能减小尺寸”
opt-level = "z"

# 链接时优化：允许跨 crate 进行更深入的优化
lto = true

# 代码生成单元：设置为1可以最大化优化机会，但会减慢编译速度
codegen-units = 1

# Panic 处理策略：'abort' 生成的代码比 'unwind' 更小
panic = "abort"